Bug 337305 - kickoff doesn't draw menu separators
Summary: kickoff doesn't draw menu separators
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-10 08:39 UTC by Harald Sitter
Modified: 2015-02-21 18:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-07-10 08:39:43 UTC
As seen in kmenuedit the menu spec allows for separators to be defined between apps/categories. These are however not drawn with kickoff which makes the kmenuedit feature pointless and confusing and ultimately seem like kickoff is buggy because to the user it is not obvious that it is not intentional that kickoff doesn't draw them. So...

Either kickoff should draw them
OR
Kmenuedit should not offer to add/manage/display separators
OR
Kmenuedit should check which menu plasmoid is active and depending on that offer the separator management

Reproducible: Always
Comment 1 David Edmundson 2015-02-21 16:55:23 UTC
We'll remove the option from kmenuedit
Comment 2 Kai Uwe Broulik 2015-02-21 18:20:49 UTC
Git commit 06393d5fa99a8cc45ab6694912ff5cde0f4223f4 by Kai Uwe Broulik.
Committed on 21/02/2015 at 18:20.
Pushed by broulik into branch 'master'.

Remove separator functionality

These are no longer supported in Plasma 5

REVIEW: 122666

M  +0    -4    kmenuedit.cpp
M  +1    -6    menufile.cpp
M  +0    -7    menuinfo.cpp
M  +0    -8    menuinfo.h
M  +0    -124  treeview.cpp
M  +0    -6    treeview.h

http://commits.kde.org/kmenuedit/06393d5fa99a8cc45ab6694912ff5cde0f4223f4