Remove separator functionality

These are no longer supported in Plasma 5

REVIEW: 122666
BUG: 337305